# d-code

./: .gitignore  Cargo.toml  DCODE.md  README.md  session.md
.github/workflows/: ci.yml  release.yml
crates/dcode-agent/: Cargo.toml
crates/dcode-agent/src/: compact.rs  lib.rs  prompt.rs  session.rs  skills.rs
crates/dcode-cli/: Cargo.toml
crates/dcode-cli/src/: commands.rs  input.rs  login.rs  main.rs  prompts.rs  render.rs  repl.rs  sessions.rs
crates/dcode-providers/: Cargo.toml
crates/dcode-providers/src/: anthropic.rs  antigravity.rs  copilot.rs  gemini.rs  lib.rs  oauth.rs  openai.rs  openrouter.rs  provider.rs  types.rs
crates/dcode-tools/: Cargo.toml
crates/dcode-tools/src/: bash.rs  fs.rs  lib.rs  search.rs  truncate.rs  web.rs
crates/dcode-tui/: Cargo.toml
crates/dcode-tui/src/: component.rs  lib.rs  line.rs  span.rs  tui.rs
crates/dcode-tui/src/components/: assistant_message.rs  input_bar.rs  mod.rs  spinner.rs  status_bar.rs  tool_execution.rs  user_message.rs
npm/: install.js  package.json
