[workspace]
resolver = "2"
members = [
    "crates/dcode-providers",
    "crates/dcode-tools",
    "crates/dcode-agent",
    "crates/dcode-tui",
    "crates/dcode-cli",
]

[workspace.package]
version = "0.1.8"
edition = "2021"
rust-version = "1.80"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# HTTP client (no OpenSSL — pure rustls)
reqwest = { version = "0.12", default-features = false, features = [
    "json", "stream", "rustls-tls", "gzip", "deflate",
] }

# Serialization
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"

# Error handling
anyhow   = "1"
thiserror = "2"

# OAuth / PKCE crypto
sha2   = "0.10"
base64 = "0.22"
rand   = "0.8"

# Utilities
chrono  = { version = "0.4", features = ["serde"] }
dirs    = "5"
url          = "2"
urlencoding  = "2"
tokio-util = { version = "0.7", features = ["codec", "io"] }

[profile.release]
opt-level     = 3
lto           = "fat"       # whole-program LTO: cross-crate inlining + dead-code elim
codegen-units = 1           # single unit: LLVM optimizes entire binary as one pass
strip         = "symbols"   # remove debug symbols → smaller binary
panic         = "abort"     # no unwinding machinery → smaller + faster

# Fast dev builds: minimal debug info, parallel codegen, no optimizations.
[profile.dev]
opt-level     = 0
debug         = 1           # line tables only (faster than full debug = 2)
codegen-units = 256         # maximum parallelism for incremental builds
