[package]
name    = "d-code"
version.workspace = true
edition.workspace = true

[[bin]]
name = "d-code"
path = "src/main.rs"

[dependencies]
tokio.workspace       = true
futures.workspace     = true
serde.workspace       = true
serde_json.workspace  = true
anyhow.workspace      = true
thiserror.workspace   = true
chrono.workspace      = true
dirs.workspace        = true
dcode-providers = { path = "../dcode-providers" }
dcode-tools     = { path = "../dcode-tools" }
dcode-agent     = { path = "../dcode-agent" }
dcode-tui       = { path = "../dcode-tui" }

clap      = { version = "4", features = ["derive", "color"] }
crossterm = "0.28"
reqwest.workspace = true
base64.workspace  = true
