[package]
name    = "dcode-providers"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace      = true
futures.workspace    = true
async-trait.workspace = true
reqwest.workspace    = true
serde.workspace      = true
serde_json.workspace = true
anyhow.workspace     = true
thiserror.workspace  = true
sha2.workspace       = true
base64.workspace     = true
rand.workspace       = true
chrono.workspace     = true
dirs.workspace       = true
url.workspace        = true
async-stream = "0.3"
